force-app/main/default/objects/Contract_Expense__c/Contract_Expense__c.object-meta.xml
<CustomObject>
    <label>Contract Expense</label>
    <nameField>
        <displayFormat>Expense-{00000}</displayFormat>
        <label>Contract Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>