force-app/main/default/objects/Contract_Expense__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Background Check</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case_Record__c</field>
            <operation>equals</operation>
            <valueField>Client_Session__c.Case_Record__c</valueField>
        </filterItems>
        <filterItems>
            <field>Client_Session__c.Service_Entry_Name__c</field>
            <operation>contains</operation>
            <value>Background Check</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Contract Expenses</relationshipLabel>
    <relationshipName>Contract_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>