force-app/main/default/objects/Contract_Expense__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Contract Expenses</relationshipLabel>
    <relationshipName>Contract_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>