force-app/main/default/objects/Contract_Expense__c/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Link</label>
    <referenceTo>Contract_Link__c</referenceTo>
    <relationshipLabel>Contract Expenses</relationshipLabel>
    <relationshipName>Contract_Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>