force-app/main/default/objects/Contract_Expense__c/fields/Drug_Test_History__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test_History__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drug Test History</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case_Record__c</field>
            <operation>equals</operation>
            <valueField>Drug_Test_History__c.Case_Record__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Drug_Test_History__c</referenceTo>
    <relationshipLabel>Contract Expenses</relationshipLabel>
    <relationshipName>Contract_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>