force-app/main/default/objects/Contract_Expense__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Expense_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Screen (standard)</fullName>
            </value>
            <value>
                <fullName>National Criminal Record &amp; Sex Offender Search</fullName>
            </value>
            <value>
                <fullName>Background Screen (2 counties &amp; standard search)</fullName>
            </value>
            <value>
                <fullName>Drug Screen 5 Panel</fullName>
            </value>
            <value>
                <fullName>Social Service Transactions</fullName>
            </value>
            <value>
                <fullName>Social Service Transactions - Full 6 Months</fullName>
            </value>
            <value>
                <fullName>7 Day Pass</fullName>
            </value>
            <value>
                <fullName>3 Day Pass</fullName>
            </value>
            <value>
                <fullName>1 Day Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>