force-app/main/default/objects/Contract_Expense__c/fields/Expense_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expense_Cost__c</fullName>
    <label>Expense Cost Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>