force-app/main/default/objects/Contract_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <inlineHelpText>As of FY22, Cara uses TrueTest for drug screens, Global Verification Network for background checks, and Carahsoft for employment verifications.</inlineHelpText>
    <label>Expense Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drug Screen</fullName>
            </value>
            <value>
                <fullName>Background Screen</fullName>
            </value>
            <value>
                <fullName>Employment Verification</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>