force-app/main/default/objects/Contract_Expense__c/fields/Send_Out_Employment__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Employment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Send Out / Employment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case_Record__c</field>
            <operation>equals</operation>
            <valueField>Placement__c.Case_Record__c</valueField>
        </filterItems>
        <filterItems>
            <field>Placement__c.Stage__c</field>
            <operation>equals</operation>
            <value>Job/Placement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Contract Expenses</relationshipLabel>
    <relationshipName>Contract_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>