force-app/main/default/objects/Contract_Expense__c/fields/Transit_Card_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Distribution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transit Card Distribution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case_Record__c</field>
            <operation>equals</operation>
            <valueField>Transit_Card_Distribution__c.Participant__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transit_Card_Distribution__c</referenceTo>
    <relationshipLabel>Contract Expenses</relationshipLabel>
    <relationshipName>Contract_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>