force-app/main/default/objects/Contract_Expense__c/recordTypes/Background_Check_Expense.recordType-meta.xml
<RecordType>
    <fullName>Background_Check_Expense</fullName>
    <active>true</active>
    <label>Background Check Expense</label>
</RecordType>