force-app/main/default/objects/Contract_Expense__c/recordTypes/Drug_Test_Expense.recordType-meta.xml
<RecordType>
    <fullName>Drug_Test_Expense</fullName>
    <active>true</active>
    <label>Drug Test Expense</label>
</RecordType>