force-app/main/default/objects/Contract_Expense__c/recordTypes/Employment_Verification_Expense.recordType-meta.xml
<RecordType>
    <fullName>Employment_Verification_Expense</fullName>
    <active>true</active>
    <label>Employment Verification Expense</label>
</RecordType>