force-app/main/default/objects/Contract_Expense__c/recordTypes/New_Contract_Expense.recordType-meta.xml
<RecordType>
    <fullName>New_Contract_Expense</fullName>
    <active>true</active>
    <label>New Contract Expense</label>
</RecordType>