force-app/main/default/objects/Contract_Expense__c/recordTypes/Transit_Expense.recordType-meta.xml
<RecordType>
    <fullName>Transit_Expense</fullName>
    <active>true</active>
    <label>Transit Expense</label>
</RecordType>