force-app/main/default/objects/Contract_Expense__c/validationRules/Contract_Link_Completion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Link_Completion_Date</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(Contract_Link__r.Completion_Date__c))

&amp;&amp;

Date__c &gt; Contract_Link__r.Completion_Date__c</errorConditionFormula>
    <errorMessage>The date of this expense is greater than the Contact Link Completion Date.</errorMessage>
</ValidationRule>