force-app/main/default/objects/Contract_Expense__c/validationRules/Contract_Link_Enrollment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Link_Enrollment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &lt; Contract_Link__r.Enrollment_Date__c</errorConditionFormula>
    <errorMessage>The date of this expense is less than the Contact Link Enrollment Date.</errorMessage>
</ValidationRule>